feat(cookie): add cookie policy and popup
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -103,6 +103,8 @@
 
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
+  <!-- cookie consent -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 
 
 </head>
