--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,6 +7,7 @@
         {{ with .Site.Params.about_us }}<p class="about-us">{{ . | safeHTML }}</p>{{ end }}
         {{ with .Site.Params.copyright }}<p>{{ . | safeHTML }}</p>{{ end }}
         <a href="/privacy-notice">Privacy Notice</a>
+        <a href="/cookie-policy">Cookie Policy</a>
       </div>
 
       {{ with .Site.Params.address }}
