--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -130,3 +130,22 @@
 
 </script>
 
+<!-- cookie consent -->
+<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+<script>
+window.cookieconsent.initialise({
+  "palette": {
+    "popup": {
+      "background": "#66b8b8"
+    },
+    "button": {
+      "background": "#366867"
+    }
+  },
+  "content": {
+    "message": "We use cookies mainly to analyze traffic. Some video providers also use cookies.",
+    "href": "https://open-security-summit.org/cookie-policy"
+  }
+});
+</script>
+
