--- a/layouts/partials/session/metadata.html
+++ b/layouts/partials/session/metadata.html
@@ -138,7 +138,7 @@
                     frameborder="0"
                     width="100%"
                     height="600"
-                    src="https://www.youtube.com/embed/{{ $you_tube }}"
+                    src="https://www.youtube-nocookie.com/embed/{{ $you_tube }}"
                     allowfullscreen>
             </iframe>
         </div>
