--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -99,7 +99,7 @@
   <script src="//code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
 <!-- used in the home page for integration swiper with youtube player-->
-  <script src="https://www.youtube.com/player_api" async></script>
+<!-- script src="https://www.youtube.com/player_api" async></script -->
 
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
