--- a/layouts/partials/home-page/book-tickets.html
+++ b/layouts/partials/home-page/book-tickets.html
@@ -1,27 +1,37 @@
 <section class="booking-section">
   <div class="container booking-container">
     <div class="booking-blocks">
-      <div class="booking-banner">
-        <div class="booking-banner-text">
-
-          <div>
-            <div class="booking-leader">
-              <img src="/img/home/booking/check.svg" alt="check"/><span>OWASP Leader / Member</span>
-            </div>
-            <div class="booking-students">
-              <img src="/img/home/booking/check.svg" alt="check"/><span>Students & LLHS Members</span>
-            </div>
+     <div class="booking-info">
+      <h3 class="booking-subtitle booking-subtitle-upper">Time is running out</h3>
+      <h2 class="booking-title">Book your ticket</h2>
+      <p class="booking-text">Lorem Ipsum has been the industry's standard dummy text ever 
+       since the 1500s, when an unknown printer took a galley of type 
+       and scrambled it to make a type specimen book.
+       </p>
+     </div>
+      <div class="booking-time">
+        <h3 class="booking-subtitle">Time for the next keynote session</h3>
+        <div class="booking-time-blocks">
+          <div class="booking-time-block">
+           <span>221</span>
+           <p>days</p>
           </div>
-        </div>
+         <div class="booking-time-block">
+           <span>16</span>
+           <p>hours</p>
+          </div>
+         <div class="booking-time-block">
+            <span>1</span>
+            <p>minutes</p>
+          </div>
+          <div class="booking-time-block">
+            <span>21</span>
+            <p>seconds</p>
+          </div>
+       </div>
+       <div class="booking-button">
+        <button id="book-now">Book now</button>
       </div>
-      <div class="booking-buy">
-        <div class="booking-summit">
-          <div class="section-overtitle booking-overtitle">summit sessions</div>
-          <a href="https://open-security-summit-2021.heysummit.com/checkout/select-tickets/">
-            <div class="booking-book">buy summit Ticket</div>
-          </a>
-        </div>
       </div>
-    </div>
   </div>
 </section>
