--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,19 +16,19 @@
         <div class="home-page">
             {{ partial "home-page/hero-over.html" . }}
             {{ partial "home-page/join-next-summit.html" . }}
-            {{ partial "home-page/promote-sessions.html" . }}
+       <!--{{ partial "home-page/promote-sessions.html" . }}-->
+            {{ partial "home-page/book-tickets.html" . }}
 
-<!--            {{ partial "home-page/summit-dates.html" . }}-->
-<!--            {{ partial "home-page/schedule.html" . }}-->
-<!--            {{ partial "home-page/book-tickets.html" . }}-->
-<!--            {{ partial "home-page/attend-summit.html" . }}-->
-<!--            {{ partial "home-page/container/speakers.html" . }}-->
-<!--            {{ partial "home-page/container/photo-gallery.html" . }} -->
-            {{ partial "home-page/testimonials.html" . }}
-<!--            {{ partial "home-page/articles.html" . }}-->
-<!--            {{ partial "home-page/newsletter-signup.html" . }}-->
-            {{ partial "home-page/previous-summits-2021.html" . }}
-<!--            {{ partial "sponsors/sponsorship-model.html" . }}-->
+            <!--{{ partial "home-page/summit-dates.html" . }}-->
+            <!--{{ partial "home-page/schedule.html" . }}-->
+            <!--{{ partial "home-page/attend-summit.html" . }}-->
+            <!--{{ partial "home-page/container/speakers.html" . }}-->
+          <!--{{ partial "home-page/container/photo-gallery.html" . }}-->
+            <!--{{ partial "home-page/testimonials.html" . }}-->
+            <!--{{ partial "home-page/articles.html" . }}-->
+            <!--{{ partial "home-page/newsletter-signup.html" . }}-->
+            <!--{{ partial "home-page/previous-summits-2021.html" . }}-->
+            <!--{{ partial "sponsors/sponsorship-model.html" . }}-->
         </div>
       </div>
 
