--- a/layouts/partials/home-page/join-next-summit.html
+++ b/layouts/partials/home-page/join-next-summit.html
@@ -2,8 +2,8 @@
   <div class="container container-xl container-centric">
     <div class="joinnext-block">
       <div class="section-title joinnext-title">Join us for more on June 2021{{/* .Site.nextSummerYear */}}</div>
-      <div class="joinnext-badge-next">Come explore open security Summit Virtual Experience: You'll be able to access all-
-        new sessions and live opportunities to ask the experts questions on key topics.</div>
+      <div class="joinnext-badge-next">Come Explore Open Security Summit Virtual Experience: You'll Be Able To Access
+        All- New Sessions And Live Opportunities To Ask The Experts Questions On Key Topics.</div>
 
     </div>
   </div>
