--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,13 +16,15 @@
         <div class="home-page">
             {{ partial "home-page/hero-over.html" . }}
             {{ partial "home-page/join-next-summit.html" . }}
-       <!--{{ partial "home-page/promote-sessions.html" . }}-->
+      
             {{ partial "home-page/book-tickets.html" . }}
+            {{ partial "home-page/container/speakers.html" . }}
 
             <!--{{ partial "home-page/summit-dates.html" . }}-->
             <!--{{ partial "home-page/schedule.html" . }}-->
             <!--{{ partial "home-page/attend-summit.html" . }}-->
-            <!--{{ partial "home-page/container/speakers.html" . }}-->
+
+   <!--{{ partial "home-page/promote-sessions.html" . }}-->
           <!--{{ partial "home-page/container/photo-gallery.html" . }}-->
             <!--{{ partial "home-page/testimonials.html" . }}-->
             <!--{{ partial "home-page/articles.html" . }}-->
