--- a/layouts/partials/tracks/body.html
+++ b/layouts/partials/tracks/body.html
@@ -1,7 +1,7 @@
 <section class="tracks-section">
     <div class="container container-xl">
         <div class="tracks-wrapper">
-            <div class="title">SUMMIT TRACKS</div>
+<!--            <div class="title">SUMMIT TRACKS</div>-->
 
             <div class="table">
                 {{ $styles := (slice "ciso" "cloud-security" "content-disarm" "covid" "devsecops" "hacking" "isg" "lightning" "misc" "owasp-asvs" "owasp-juice-shop" "owasp-projects" "security-standards" "social" "threat-modeling" "wardleymaps") }}
