--- a/layouts/partials/home-page/schedule.html
+++ b/layouts/partials/home-page/schedule.html
@@ -21,7 +21,7 @@
         <div class="booking-book">
           Today at the Summit
         </div>
-        <h2 class="schedule-subtitle">{{$today.day}} {{$today.date}} June - Schedule</h2>
+        <h2 class="schedule-subtitle">{{$today.day}} {{$today.date}} {{$today.month }} - Schedule</h2>
       </div>
 
       <div class="schedule-entries">
