--- a/layouts/partials/home-page/container/speakers.html
+++ b/layouts/partials/home-page/container/speakers.html
@@ -1,5 +1,7 @@
 <section class="speakers-section">
-  <div class="container container-xl">
+  <!--<div class="container container-xl">-->
+    <div class="container container-xxl container-centric">
+
     {{ partial "home-page/speakers.html" . }}
   </div>
 </section>
