--- a/layouts/partials/video/item.html
+++ b/layouts/partials/video/item.html
@@ -8,7 +8,7 @@
        allowfullscreen></iframe>
     </div>
     <div class="words">
-      <div class="author">{{ .author }}</div>
-      <div class="description">{{ .description }} ({{ .date }})</div>
+      <div class="author">{{- .author -}}</div>
+      <div class="description">{{- .description -}}</div>
     </div>
   </div>
