--- a/layouts/partials/home-page/book-tickets.html
+++ b/layouts/partials/home-page/book-tickets.html
@@ -13,19 +13,19 @@
         <h3 class="booking-subtitle">Time for the next keynote session</h3>
         <div class="booking-time-blocks">
           <div class="booking-time-block">
-           <span>221</span>
+           <span id="days"></span>
            <p>days</p>
           </div>
          <div class="booking-time-block">
-           <span>16</span>
+           <span id="hours"></span>
            <p>hours</p>
           </div>
          <div class="booking-time-block">
-            <span>1</span>
+            <span id="minutes"></span>
             <p>minutes</p>
           </div>
           <div class="booking-time-block">
-            <span>21</span>
+            <span id="seconds"></span>
             <p>seconds</p>
           </div>
        </div>
@@ -35,3 +35,27 @@
       </div>
   </div>
 </section>
+
+<script>
+const countDownDate = new Date("Jun 5, 2021 15:00:00").getTime();
+
+const x = setInterval(function() {
+  const now = new Date().getTime();
+
+  const distance = countDownDate - now;
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  document.getElementById("days").innerHTML = days;
+  document.getElementById("hours").innerHTML = hours;
+  document.getElementById("minutes").innerHTML = minutes;
+  document.getElementById("seconds").innerHTML = seconds;
+
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED";
+  }
+}, 1000);
+</script>
