added more content

--- a/layouts/partials/schedule/list/body.html
+++ b/layouts/partials/schedule/list/body.html
@@ -21,7 +21,7 @@
 <!--{{ $title := "Training sessions"}}-->
 <!--{{ partial "schedule/list/days.html" (dict "this" $this "days" $days_next_training "title" $title) }}-->
 
-{{ $title := "Mini Summit sessions"}}
+{{ $title := ""}}
 {{ partial "schedule/list/days.html" (dict "this" $this "days" $days_next_summit   "title" $title) }}
 
 <!--{{ $title := "Watch past sessions"}}-->
