--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,16 +14,16 @@
 
       <div class="container-managed xxl">
         <div class="home-page">
-            {{ partial "home-page/hero-over.html" . }}
-            {{ partial "home-page/join-next-summit.html" . }}
-            {{ partial "home-page/promote-sessions.html" . }}
+            {{ partial "home-page/hero-mini-summit.html" . }}
+<!--            {{ partial "home-page/join-next-summit.html" . }}-->
+<!--            {{ partial "home-page/promote-sessions.html" . }}-->
 
 <!--            {{ partial "home-page/summit-dates.html" . }}-->
-<!--            {{ partial "home-page/schedule.html" . }}-->
+            {{ partial "home-page/schedule.html" . }}
 <!--            {{ partial "home-page/book-tickets.html" . }}-->
 <!--            {{ partial "home-page/attend-summit.html" . }}-->
 <!--            {{ partial "home-page/container/speakers.html" . }}-->
-<!--            {{ partial "home-page/container/photo-gallery.html" . }} -->
+            {{ partial "home-page/container/photo-gallery.html" . }}
             {{ partial "home-page/testimonials.html" . }}
 <!--            {{ partial "home-page/articles.html" . }}-->
 <!--            {{ partial "home-page/newsletter-signup.html" . }}-->
