removed summit schedule info (hardcoded to 2020 summit) from participant's page

--- a/layouts/participant/single.html
+++ b/layouts/participant/single.html
@@ -53,11 +53,11 @@
 
         {{ partial "schedule/in-rows/still-to-happen.html" (dict "this" . "pages" $sessions )}}
 
-        <br/>
-        <h1>Schedule (all sessions)</h1>
-        <!-- table view-->
-        {{ partial "participant/when-day.html"        . }}
-        {{ partial "participant/schedule.html"        . }}
+<!--        <br/>-->
+<!--        <h1>Schedule (all sessions)</h1>-->
+<!--        &lt;!&ndash; table view&ndash;&gt;-->
+<!--        {{ partial "participant/when-day.html"        . }}-->
+<!--        {{ partial "participant/schedule.html"        . }}-->
 <!--        {{ partial "participant/sessions.html"        . }}-->
 
         {{ partial "session/register-as-organizer.html" . }}
