--- a/assets/style/home2020.scss
+++ b/assets/style/home2020.scss
@@ -358,7 +358,7 @@ $testimonials-image-height: 100px;
 	}
 
 	&-text {
-		width: 710px;
+		max-width: 710px;
 		color: $main-inverse-text-color;
 
 		margin-top: 30px;
@@ -614,21 +614,22 @@ $testimonials-image-height: 100px;
 /*****************************/
 .videos {
 	&-section {
-		margin: 113px 82px;
-		padding-bottom: 40px;
-		border: 4px solid #efefef;
-
+		padding: 120px 0;
+		.container {
+			border: 4px solid #efefef;
+		}
 		.swiper-container {
-			width: 100%;
-			text-align: center;
+			//width: 100%;
+			//text-align: center;
 			padding: 100px 0;
 			.video-item {
 				margin: 0 auto;
 				margin-top: 70px;
 				width: 992px;
-				height: 700px;
+				height: 654px;
 				.source {
-					height: inherit;
+					width: 992px;
+					height: 654px;
 				}
 			}
 		}
@@ -709,8 +710,7 @@ $testimonials-image-height: 100px;
 				&.keynote {
 					background-color: $main-active-link-color;
 				}
-				&.working-session {
-				}
+
 				&.user-session {
 					background-color: $main-text-color-alt;
 				}
@@ -868,9 +868,6 @@ $testimonials-image-height: 100px;
 
 	&-board {
 		display: flex;
-		//justify-content: center;
-		justify-content: space-between;
-
 		.blocks {
 			display: flex;
 			justify-content: space-between;
@@ -888,10 +885,13 @@ $testimonials-image-height: 100px;
 			span {
 				font-size: 100px;
 				font-weight: 500;
+				margin: 0;
+				line-height: normal;
 			}
 			p {
 				font-size: 40px;
 				color: #8c8c9a;
+				margin: 0;
 			}
 		}
 
@@ -930,8 +930,11 @@ $testimonials-image-height: 100px;
 	}
 
 	&-twitter {
-		//height: 100%;
-		box-shadow: 0 0 13px rgba(2, 2, 2, 0.07);
+		width: 100% !important;
+		iframe[id^="twitter-widget-"] {
+			width: 100% !important;
+			height: 958px !important;
+		}
 	}
 }
 /* end of INFORMATION styles */
@@ -1057,9 +1060,7 @@ $testimonials-image-height: 100px;
 	&-image {
 		img {
 			width: 100%;
-			//min-width: 100%;
 			height: $articles-image-height;
-			//max-height: $articles-image-height;
 		}
 	}
 
@@ -1116,7 +1117,6 @@ $testimonials-image-height: 100px;
 		}
 	}
 	&-button {
-		//width: 130px;
 		font-weight: 400;
 		text-transform: uppercase;
 		background-color: $main-background-color;
@@ -1144,9 +1144,6 @@ $testimonials-image-height: 100px;
 		margin-bottom: -66px;
 		padding-bottom: 130px;
 		padding-top: 130px;
-		//padding-bottom: 30px;
-		//padding-top: 30px;
-		//background-color: $alt-background-color;
 	}
 	&-container {
 		text-align: center;
@@ -1190,8 +1187,6 @@ $testimonials-image-height: 100px;
 		justify-content: space-around;
 		align-items: center;
 		height: 100%;
-		//margin-top: 0;
-		//margin-bottom: 0;
 		position: relative;
 		&:before {
 			content: " ";
@@ -1217,7 +1212,6 @@ $testimonials-image-height: 100px;
 		min-width: 460px;
 	}
 	&-date {
-		//font-family: 'Oswald Medium', helvetica neue, helvetica, sans-serif;
 		min-width: 460px;
 	}
 }
@@ -1330,12 +1324,6 @@ $testimonials-image-height: 100px;
 			font-size: 30px;
 			margin-bottom: 0;
 		}
-		&-leader,
-		&-students {
-			//font-size: 26px;
-			img {
-			}
-		}
 		&-banner {
 			padding-left: 0;
 			padding-right: 0;
@@ -1348,6 +1336,34 @@ $testimonials-image-height: 100px;
 		}
 		&-overtitle {
 			font-size: 24px;
+		}
+	}
+
+	.information {
+		&-board {
+			.block {
+				padding: 20px 60px;
+				span {
+					font-size: 50px;
+				}
+				p {
+					font-size: 20px;
+					font-weight: 300;
+				}
+			}
+		}
+
+		&-twitter {
+			iframe[id^="twitter-widget-"] {
+				height: 675px !important;
+			}
+		}
+	}
+	.videos {
+		&-section {
+			.swiper-container {
+				padding-top: 40px;
+			}
 		}
 	}
 
@@ -1441,46 +1457,82 @@ $testimonials-image-height: 100px;
 
 	.booking {
 		&-section {
-			height: 240px;
+			height: 730px;
+			margin-bottom: 74px;
 		}
 		&-blocks {
-			height: 240px;
+			height: 100%;
+			padding-top: 43px;
 		}
-		&-title {
-			font-size: 30px;
-		}
-		&-free {
-			font-size: 24px;
-		}
-		&-leader,
-		&-students {
-			font-size: 22px;
-			img {
-				width: 18px;
-			}
-		}
-		&-banner {
-			&-text {
-				padding-left: 0;
-				padding-right: 35px;
-			}
-		}
-		&-book {
-			font-size: 20px;
-			padding-top: 14px;
-			padding-bottom: 14px;
-			width: 60%;
-		}
-		&-overtitle {
-			font-size: 18px;
+
+		&-text {
+			margin-bottom: 43px;
 		}
 	}
 
-	.speakers {
-		text-align: center;
-		.card {
-			&-description {
+	.speaker {
+		&s {
+			&-section {
+				padding-top: 100px;
+				padding-bottom: 54px;
+			}
+			.card {
+				&-speaker {
+					margin-left: 10px;
+					h3 {
+						font-size: 24px;
+					}
+					p {
+						font-size: 22px;
+					}
+				}
+			}
+		}
+	}
+
+	.information {
+		&-section {
+			min-height: 1740px;
+		}
+		&-board {
+			flex-direction: column;
+			.block {
 				text-align: center;
+				background-color: #ffffff;
+				box-shadow: 0 0 13px rgba(2, 2, 2, 0.07);
+				&:last-child {
+					margin-right: 40px;
+				}
+				span {
+					font-size: 100px;
+				}
+				p {
+					font-size: 40px;
+				}
+			}
+		}
+
+		&-weeks {
+			margin-right: 0px;
+			margin-bottom: 60px;
+		}
+
+		&-twitter {
+			box-shadow: 0 0 13px rgba(2, 2, 2, 0.07);
+		}
+	}
+
+	.videos {
+		&-section {
+			.swiper-container {
+				.video-item {
+					width: 720px;
+					height: 400px;
+					.source {
+						width: 720px;
+						height: 400px;
+					}
+				}
 			}
 		}
 	}
@@ -1552,6 +1604,9 @@ $testimonials-image-height: 100px;
 	.prevsummits {
 		&-button {
 			font-size: 30px;
+			&s {
+				flex-direction: column;
+			}
 		}
 	}
 
@@ -1564,9 +1619,6 @@ $testimonials-image-height: 100px;
 			}
 		}
 		&-day {
-			&-entries {
-				//padding: 40px 10px;
-			}
 			.schedule-entry {
 				.body {
 					&-title {
@@ -1670,18 +1722,44 @@ $testimonials-image-height: 100px;
 			padding-right: 30px;
 			text-align: center;
 		}
-		&-overtitle {
-		}
 	}
 
 	.speaker {
 		&s {
-			padding-top: 50px;
-			padding-bottom: 20px;
-
+			&-section {
+				padding-top: 64px;
+				padding-bottom: 36px;
+			}
 			.card {
 				&-speaker {
-					text-align: center;
+					margin-left: 10px;
+					h3 {
+						font-size: 18px;
+					}
+					p {
+						font-size: 16px;
+					}
+				}
+			}
+		}
+	}
+	.information {
+		&-section {
+			min-height: 1600px;
+		}
+		&-board {
+			flex-direction: column;
+			.block {
+				padding: 12px 48px;
+				margin-left: 28px;
+				&:last-child {
+					margin-right: 28px;
+				}
+				span {
+					font-size: 68px;
+				}
+				p {
+					font-size: 34px;
 				}
 			}
 		}
@@ -1740,8 +1818,7 @@ $testimonials-image-height: 100px;
 				letter-spacing: 2px;
 			}
 		}
-		&-button {
-		}
+
 		&-email,
 		&-button {
 			padding: 10px 15px;
@@ -1874,12 +1951,7 @@ $testimonials-image-height: 100px;
 		}
 		&-over {
 			&-badge-next {
-				//height: 24px;
-				//width: 157px;
-				//font-size: 12px;
-				//line-height: 24px;
 				margin-bottom: 10px;
-				//margin-top: 0;
 			}
 			&-over-message {
 				font-size: 13px;
@@ -1905,10 +1977,6 @@ $testimonials-image-height: 100px;
 	}
 
 	.attend {
-		&-block {
-			//padding-top: 75px;
-		}
-
 		&-card {
 			height: 120px;
 		}
@@ -1920,39 +1988,143 @@ $testimonials-image-height: 100px;
 
 	.booking {
 		&-section {
-			display: flex;
-			align-items: center;
+			margin-bottom: 74px;
 		}
-		&-blocks {
-			height: 200px;
+		&-subtitle {
+			&-upper {
+				font-weight: 500;
+			}
 		}
 		&-title {
-			font-size: 24px;
-			line-height: 20px;
+			font-size: 50px;
 		}
-		&-free {
+
+		&-time {
+			&-blocks {
+				margin-bottom: 48px;
+			}
+			&-block {
+				width: 102px;
+				line-height: 32px;
+				span {
+					font-size: 38px;
+				}
+
+				p {
+					font-size: 14px;
+				}
+			}
+		}
+
+		&-text {
+			max-width: 620px;
+		}
+		&-button {
+			width: 182px;
+			height: 52px;
+			letter-spacing: 1.5px;
 			font-size: 20px;
 		}
-		&-leader,
-		&-students {
-			font-size: 18px;
+	}
+
+	.speaker {
+		&s {
+			&-banner {
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+			}
+			.card {
+				&-speaker {
+					margin-left: 0;
+					h3 {
+						font-size: 34px;
+						line-height: 48px;
+					}
+					p {
+						font-size: 28px;
+						line-height: 28px;
+					}
+				}
+			}
+		}
+	}
+	.information {
+		&-section {
+			min-height: 3077px;
+		}
+
+		&-weeks {
+			width: 100%;
+		}
+		&-board {
+			flex-direction: column;
+			align-items: center;
+			.blocks {
+				flex-direction: column;
+				padding: 0 70px;
+			}
+			.block {
+				padding: 12px 42px;
+				margin-left: 0;
+				margin-bottom: 60px;
+				&:last-child {
+					margin-right: 0;
+				}
+				span {
+					font-size: 100px;
+				}
+				p {
+					font-size: 58px;
+				}
+			}
+			h2 {
+				font-size: 68px;
+			}
+
+			.summit {
+				margin-bottom: 35px;
+			}
+		}
+
+		&-weeks {
+			padding-top: 30px;
+			padding-bottom: 40px;
+		}
+	}
+
+	.highlights {
+		background-color: #efefef;
+		padding: 50px 0;
+		&-card {
+			align-items: flex-start;
 			img {
-				width: 16px;
+				margin-right: 30px;
+			}
+			h3 {
+				font-size: 28px;
+
+				line-height: 28px;
+			}
+			p {
+				font-size: 22px;
+				line-height: 22px;
 			}
 		}
-		&-banner {
-			&-text {
-				max-width: 460px;
+	}
+
+	.videos {
+		&-section {
+			.swiper-container {
+				.video-item {
+					width: 480px;
+					height: 280px;
+					.source {
+						width: 480px;
+						height: 280px;
+					}
+				}
 			}
-		}
-		&-buy {
-			//justify-content: center;
-			//font-size: 20px;
-		}
-		&-book {
-			width: 50%;
-		}
-		&-overtitle {
 		}
 	}
 
@@ -2032,7 +2204,6 @@ $testimonials-image-height: 100px;
 						background-color: transparent;
 						margin-right: 10px;
 						min-width: 80px;
-						//height: 80px;
 						a {
 							img {
 								margin-top: 20px;
@@ -2109,20 +2280,14 @@ $testimonials-image-height: 100px;
 	.prevsummits {
 		&-button {
 			font-size: 22px;
-			margin-top: 5px;
-			margin-bottom: 5px;
+			margin-top: 15px;
+			margin-bottom: 15px;
 			padding: 4px 30px;
-			&s {
-				flex-direction: column;
-				a {
-					margin-right: 0;
-					&:first-child {
-						margin-right: 0;
-						margin-top: 10px;
-					}
-				}
-			}
 		}
+	}
+
+	#footer {
+		text-align: center;
 	}
 }
 
@@ -2132,7 +2297,7 @@ $testimonials-image-height: 100px;
 @media screen and (max-width: $sm-breakpoint) {
 	.section {
 		&-title {
-			font-size: 32px;
+			font-size: 36px;
 		}
 	}
 
@@ -2148,7 +2313,6 @@ $testimonials-image-height: 100px;
 			margin-bottom: 14px;
 		}
 		&-over-message {
-			//font-size: 13px;
 			margin-bottom: 5px;
 		}
 		&-over {
@@ -2175,44 +2339,131 @@ $testimonials-image-height: 100px;
 	}
 
 	.booking {
-		&-blocks {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
+		&-section {
+			height: 642px;
 		}
-		&-container {
-			width: 99%;
-			padding-left: 4px;
-			padding-right: 4px;
-		}
-		&-banner {
-			max-width: 380px;
-			width: 100%;
-			&-text {
-				max-width: 100%;
-				justify-content: space-between;
-				width: 100%;
-				padding: 0 0 0 14px;
+		&-subtitle {
+			font-size: 18px;
+			line-height: 30px;
+			&-upper {
+				font-size: 18px;
 			}
 		}
-		&-overtitle {
-			font-size: 16px;
-			letter-spacing: initial;
+		&-title {
+			font-size: 42px;
 		}
-		&-book {
-			padding-left: 16px;
-			padding-right: 16px;
-			font-size: 14px;
+
+		&-time {
+			&-blocks {
+				margin-bottom: 38px;
+			}
+			&-block {
+				width: 90px;
+				line-height: 26px;
+				span {
+					font-size: 32px;
+				}
+
+				p {
+					font-size: 14px;
+				}
+			}
 		}
-		&-buy {
-			max-width: 400px;
-			width: 100%;
-			display: flex;
+
+		&-text {
+			max-width: 620px;
+			font-size: 18px;
+			line-height: 26px;
+			margin-bottom: 26px;
+		}
+		&-button {
+			width: 182px;
+			height: 52px;
+			letter-spacing: 1.5px;
+			font-size: 20px;
+		}
+	}
+
+	.speaker {
+		&s {
+			.card {
+				&-speaker {
+					//margin-left: 10px;
+					h3 {
+						font-size: 26px;
+						line-height: 36px;
+					}
+					p {
+						font-size: 24px;
+						line-height: 24px;
+					}
+				}
+			}
+		}
+	}
+	.information {
+		&-section {
+			min-height: 1600px;
+		}
+		&-board {
+			flex-direction: column;
+			.blocks {
+				padding: 0 36px;
+			}
+			.block {
+				span {
+					font-size: 84px;
+				}
+				p {
+					font-size: 38px;
+				}
+			}
+			h2 {
+				font-size: 52px;
+			}
+		}
+
+		&-weeks {
+			padding-top: 30px;
+			padding-bottom: 40px;
+		}
+	}
+
+	.highlights {
+		background-color: #efefef;
+		&-card {
+			flex-direction: column;
 			align-items: center;
-			justify-content: space-between;
-		}
-		&-summit {
 			width: 100%;
+			height: auto;
+			text-align: center;
+			img {
+				margin: 0;
+			}
+			h3 {
+				font-size: 38px;
+
+				line-height: 38px;
+			}
+			p {
+				font-size: 32px;
+				line-height: 32px;
+			}
+		}
+	}
+
+	.videos {
+		&-section {
+			.swiper-container {
+				.video-item {
+					width: 360px;
+					height: 180px;
+					.source {
+						width: 360px;
+						height: 180px;
+					}
+				}
+			}
 		}
 	}
 
@@ -2222,17 +2473,6 @@ $testimonials-image-height: 100px;
 		}
 		&-title {
 			font-size: 26px;
-		}
-	}
-
-	.promote {
-		&-section {
-			.swiper-container {
-				.video-item {
-					margin-top: 40px;
-					height: 410px;
-				}
-			}
 		}
 	}
 
@@ -2350,7 +2590,7 @@ $testimonials-image-height: 100px;
 @media screen and (max-width: $xs-breakpoint) {
 	.section {
 		&-title {
-			font-size: 22px;
+			font-size: 32px;
 		}
 	}
 
@@ -2378,6 +2618,84 @@ $testimonials-image-height: 100px;
 		}
 	}
 
+	.booking {
+		&-subtitle {
+			font-size: 14px;
+		}
+		&-title {
+			font-size: 36px;
+		}
+
+		&-time {
+			&-blocks {
+				margin-bottom: 28px;
+			}
+			&-block {
+				line-height: 23px;
+				span {
+					font-size: 26px;
+				}
+
+				p {
+					font-size: 10px;
+				}
+			}
+		}
+
+		&-text {
+			font-size: 14px;
+			line-height: 22px;
+			margin-bottom: 20px;
+		}
+	}
+
+	.information {
+		&-board {
+			flex-direction: column;
+			.blocks {
+				padding: 0 30px;
+			}
+			.block {
+				padding: 12px 36px;
+				margin-bottom: 24px;
+
+				span {
+					font-size: 48px;
+				}
+				p {
+					font-size: 30px;
+				}
+			}
+			h2 {
+				font-size: 32px;
+			}
+
+			.summit {
+				margin-bottom: 35px;
+			}
+		}
+
+		&-weeks {
+			padding-top: 30px;
+			padding-bottom: 40px;
+		}
+	}
+	.highlights {
+		background-color: #efefef;
+		padding: 30px 0;
+		&-card {
+			h3 {
+				font-size: 28px;
+
+				line-height: 28px;
+			}
+			p {
+				font-size: 22px;
+				line-height: 22px;
+			}
+		}
+	}
+
 	.joinnext {
 		&-badge-next {
 			font-size: 8px;
@@ -2387,17 +2705,6 @@ $testimonials-image-height: 100px;
 			font-size: 18px;
 			margin-top: 15px;
 			margin-bottom: 5px;
-		}
-	}
-
-	.promote {
-		&-section {
-			.swiper-container {
-				.video-item {
-					margin-top: 20px;
-					height: 350px;
-				}
-			}
 		}
 	}
 
