--- a/layouts/partials/home-page/information.html
+++ b/layouts/partials/home-page/information.html
@@ -38,17 +38,7 @@
       </div>
     </div>
     <div class="information-twitter">
-      <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">📢 Next Mini-Summit Update: We are excited to announce our next mini-summit from 9th-12th November 2020.<br>
-          <br>For this edition, we have a great line-up of speakers from the industry.<br>
-          <br>Register here for FREE: <a href="https://t.co/GtBi6belWR">https://t.co/GtBi6belWR</a>
-          <a href="https://twitter.com/hashtag/OSS?src=hash&amp;ref_src=twsrc%5Etfw">#OSS</a>
-          <a href="https://twitter.com/hashtag/threatmodelling?src=hash&amp;ref_src=twsrc%5Etfw">#threatmodelling</a>
-          <a href="https://twitter.com/hashtag/cybersecurity?src=hash&amp;ref_src=twsrc%5Etfw">#cybersecurity</a>
-          <a href="https://twitter.com/hashtag/ossminisummit?src=hash&amp;ref_src=twsrc%5Etfw">#ossminisummit</a> 
-          <a href="https://t.co/7ZvM89Kx76">pic.twitter.com/7ZvM89Kx76</a></p>&mdash; Open Security Summit (@opensecsummit) 
-          <a href="https://twitter.com/opensecsummit/status/1321821238185074688?ref_src=twsrc%5Etfw">October 29, 2020</a>
-          </blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a class="twitter-timeline" data-width="1200" data-height="2000" href="https://twitter.com/opensecsummit?ref_src=twsrc%5Etfw">Tweets by opensecsummit</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </div>
   </div>
