--- a/layouts/partials/schedule/list/body.html
+++ b/layouts/partials/schedule/list/body.html
@@ -1,16 +1,15 @@
 {{ $this := .}}
-
 <!--calendar view-->
 {{ $summit_days := .Site.Data.schedule.days.summit}}
+
 {{ $working_sessions := where (where (where .Site.Pages ".Params.type" "working-session") ".Params.when" "ne" "pre-summit") ".Params.title" "ne" "" }}
 {{ $user_sessions    := where (where .Site.Pages ".Params.type" "user-session") ".Params.title" "ne" "" }}
 {{ $keynotes         := where (where .Site.Pages ".Params.type" "keynote") ".Params.title" "ne" "" }}
 {{ $sessions         := union (union $user_sessions $working_sessions) $keynotes }}
 
+{{ $title := .Site.Data.schedule.next_event.title }}
 
-{{ $title := "Mini Summit (9th - 13th November)" }}
 {{ partial "schedule/table/table.html" (dict "self" . "pages" $sessions "valid_days" $summit_days "title" $title )}}
-
 
 <!--list view-->
 {{ $days_next_training := $this.Site.Data.schedule.days.days_next_training }}
