Finished adding support for Mini Summit in December

--- a/layouts/partials/schedule/list/body.html
+++ b/layouts/partials/schedule/list/body.html
@@ -19,7 +19,7 @@
 
 <!--{{ $title := "Training sessions"}}-->
 <!--{{ partial "schedule/list/days.html" (dict "this" $this "days" $days_next_training "title" $title) }}-->
-
+<div class="alert alert-warning">All times bellow are GMT (London time)</div>
 {{ $title := ""}}
 {{ partial "schedule/list/days.html" (dict "this" $this "days" $days_next_summit   "title" $title) }}
 
