--- a/layouts/partials/sponsors/sponsorship-model.html
+++ b/layouts/partials/sponsors/sponsorship-model.html
@@ -4,8 +4,8 @@
       <div class="container-fluid">
         <div class="row">
           <div class="section-overtitle sponsor-overtitle">SPONSHORSHIP</div>
-          <p  class="section-title sponsor-title">SPONSORSHIP OPPORTUNITIES 2021</p>
-          <!--        <p>If you are interested in one of the sponsorships packages below please <a href="mailto:info@opensecsummit.org">contact us</a>-->
+          <p  class="section-title sponsor-title">MINI SUMMIT SPONSORSHIP OPPORTUNITIES 2021</p>
+          <p>If you are interested in one of the sponsorships packages below please <a href="mailto:info@opensecsummit.org">contact us</a>-->
           <!--        </p>-->
         </div>
         <div class="packages row">
@@ -23,6 +23,10 @@
               <div class="package-adv">
                 <div class="package-adv-head">25 trees</div>
                 <div class="package-adv-for">for good causes</div>
+              </div>
+              <div class="package-adv">
+                <div class="package-adv-head">Logo placement</div>
+                <div class="package-adv-for">on Summit website and marketing</div>
               </div>
             </div>
           </div>
@@ -43,6 +47,10 @@
                 <div class="package-adv-head">5 trees</div>
                 <div class="package-adv-for">for good causes</div>
               </div>
+              <div class="package-adv">
+                <div class="package-adv-head">Logo placement</div>
+                <div class="package-adv-for">on Summit website and marketing</div>
+              </div>
             </div>
           </div>
 
@@ -62,9 +70,12 @@
                 <div class="package-adv-head">2 trees</div>
                 <div class="package-adv-for">for good causes</div>
               </div>
+              <div class="package-adv">
+                <div class="package-adv-head">Logo placement</div>
+                <div class="package-adv-for">on Summit website and marketing</div>
+              </div>
             </div>
           </div>
-        </div>
 <!--        <button class="sponsors-button">Interested in Sponsorship?</button>-->
       </div>
     </div>
