Major refactoring to add better support for mini-summits Added first set of sessions for 2021 Jan edition

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,11 +20,11 @@
 <!--            {{ partial "home-page/promote-sessions.html" . }}-->
 <!--            {{ partial "home-page/summit-dates.html" . }}-->
             {{ partial "home-page/schedule.html" . }}
-            {{ partial "home-page/book-tickets.html" . }}
+<!--            {{ partial "home-page/book-tickets.html" . }}-->
 <!--            {{ partial "home-page/attend-summit.html" . }}-->
             {{ partial "home-page/container/photo-gallery.html" . }}
             {{ partial "home-page/testimonials.html" . }}
-            {{ partial "home-page/container/speakers.html" . }}
+<!--            {{ partial "home-page/container/speakers.html" . }}-->
             {{ partial "home-page/information.html" . }}
             {{ partial "home-page/highlights.html" . }}
 <!--            {{ partial "home-page/summit-videos.html" . }}-->
